--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout Repo
-        using: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Python
-        using: actions/setup-python@v4
+        uses: actions/setup-python@v4
         with: 
           python-version: '3.10'
       - name: Install Dependencies
